--- a/templates/pesan_admin.html
+++ b/templates/pesan_admin.html
@@ -62,26 +62,27 @@
         </ul>
         <div class="container-fluid">
             <div class="card shadow mt-4">
-                <div class="card-header py-3 d-flex justify-content-between">
+                <div class="card-header py-3 d-flex justify-content-between align-items-center">
                     <h6 class="m-0 font-weight-bold" style="color: #D41A1A;">Order List</h6>
                 </div>
                 <div class="card-body">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Order Name</th>
-                                <th>Count</th>
-                                <th>Created By</th>
-                                <th>Created Date <button onclick="sortTable(0)" class="btn btn-link p-0"><i class="fas fa-sort"></i></button></th>
-                                <th>Updated By</th>
-                                <th>Updated Date <button onclick="sortTable(1)" class="btn btn-link p-0"><i class="fas fa-sort"></i></button></th>
-                            </tr>
-                        </thead>
+                    <div class="table-responsive">
+                        <table class="table table-bordered">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Order Name</th>
+                                    <th>Count</th>
+                                    <th>Created By</th>
+                                    <th>Created Date <button onclick="sortTable(0)" class="btn btn-link p-0"><i class="fas fa-sort"></i></button></th>
+                                    <th>Updated By</th>
+                                    <th>Updated Date <button onclick="sortTable(1)" class="btn btn-link p-0"><i class="fas fa-sort"></i></button></th>
+                                </tr>
+                            </thead>
                         <tbody id="order-table">                      
                         </tbody>
-                    </table>
-                    
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
