--- a/templates/vendor_admin.html
+++ b/templates/vendor_admin.html
@@ -65,7 +65,7 @@
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h6 class="m-0 font-weight-bold text-danger">Vendor Management</h6>
                     <a href="/add-vendor" class="btn btn-success btn-sm">
-                        <i class="fas fa-plus"></i> Add New Vendor
+                        <i class="fas fa-plus"></i> Tambah Vendor
                     </a>
                 </div>
                 <div class="card-body">
